--- a/app/src/main/res/layout/item_list_fragment.xml
+++ b/app/src/main/res/layout/item_list_fragment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -8,48 +10,87 @@
             type="com.example.project_myfit.ui.main.listfragment.database.Size" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <com.chauthai.swipereveallayout.SwipeRevealLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:dragEdge="right"
+        app:mode="normal">
 
-        <com.google.android.material.card.MaterialCardView
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/list_edit_icon"
+                android:layout_width="@dimen/_28sdp"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="@dimen/_4sdp"
+                android:background="#008000"
+                android:scaleType="center"
+                android:scaleX="0.9"
+                android:scaleY="0.9"
+                android:src="@drawable/icon_edit"
+                android:tint="@color/white" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/list_delete_icon"
+                android:layout_width="@dimen/_28sdp"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="@dimen/_4sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:background="#B00020"
+                android:scaleType="center"
+                android:scaleX="0.9"
+                android:scaleY="0.9"
+                android:src="@drawable/icon_delete"
+                android:tint="@color/white" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_4sdp"
-            android:layout_marginBottom="@dimen/_4sdp"
-            app:cardElevation="@dimen/_4sdp">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/list_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginHorizontal="@dimen/_12sdp"
+                android:layout_marginVertical="@dimen/_4sdp"
+                app:cardBackgroundColor="?colorPrimary"
+                app:cardElevation="@dimen/_2sdp">
 
-                <TextView
-                    android:id="@+id/list_brand"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_8sdp"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:alpha="0.8"
-                    android:includeFontPadding="false"
-                    android:text="@{size.brand}"
-                    android:textSize="@dimen/_10sdp"
-                    tools:text="Anderson Bell" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/list_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_8sdp"
-                    android:layout_marginTop="-4dp"
-                    android:includeFontPadding="false"
-                    android:text="@{size.name}"
-                    android:textSize="@dimen/_14sdp"
-                    tools:text="DAMAGED CREW NECK SWEATER" />
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/list_brand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:alpha="0.7"
+                        android:text="@{size.brand}"
+                        android:textSize="@dimen/_8sdp"
+                        tools:text="Anderson Bell" />
 
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/list_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_marginBottom="@dimen/_2sdp"
+                        android:alpha="0.8"
+                        android:text="@{size.name}"
+                        android:textSize="@dimen/_11sdp"
+                        app:fontFamily="@font/sc_dream5"
+                        tools:text="DAMAGED CREW NECK SWEATER" />
+
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+        </FrameLayout>
+    </com.chauthai.swipereveallayout.SwipeRevealLayout>
 </layout>
