--- a/app/src/main/res/anim/folder_from_bottom.xml
+++ b/app/src/main/res/anim/folder_from_bottom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="300"
-    android:fillAfter="true">
+    android:duration="200">
     <translate
-        android:fromYDelta="100%"
+        android:fromYDelta="200%"
         android:toYDelta="0%" />
-    <scale
-        android:pivotX="100%"
-        android:pivotY="120%"
-        android:toXScale="1"
-        android:toYScale="1" />
+<!--    <scale-->
+<!--        android:pivotX="50%"-->
+<!--        android:pivotY="100%"-->
+<!--        android:toXScale="1"-->
+<!--        android:toYScale="1" />-->
 
-    <set android:duration="800">
-        <alpha
-            android:fromAlpha="0"
-            android:toAlpha="1" />
-    </set>
+<!--    <set android:duration="800">-->
+<!--        <alpha-->
+<!--            android:fromAlpha="0"-->
+<!--            android:toAlpha="1" />-->
+<!--    </set>-->
 
 </set>
